--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.4",
     "crypto": "^1.0.1",
+    "csv-parser": "^3.0.0",
     "deepmerge": "^4.3.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
